# graph-semantical-engine

./: .gitignore  README.md  agraph.py  concept.txt  example_basic_load_dump.py  gol.py  gui.py  pyproject.toml  requirements.txt  setup.py  tops.uxf  try_lines_to_objects.py  ygraph_to_gui.py  ylines_to_objects_by_indents.py
examples/: exampl_graph_to_yaml.py  example_basic_load_dump.py
gse/: DictEntityGraph.py  DisplayOptions.py  __init__.py  agraph.py  converter.py  dictgraph.py  dummy.py  dump.py  entitygraph.py  entitygraphcontroller.py  gCanvasObjItemRender.py  gcanvas.py  gio.py  gitemclzrenderer.py  gitemovalrenderer.py  gol.py  gol_deprecated.py  gui.py  gutil.py  inbox.py  inboxcounter.py  load.py  objgraph.py  tkeditobjframe.py  tkobjframe.py
gse/examples/: dummy_display.py  entity_edit_display.py  exampl_graph_to_yaml.py  example_basic_load_dump.py  example_deepsize.py  example_deepsize_dict_graph.py  example_deepsize_obj_graph.py  example_parent_children_loac.py  example_plaser.py  example_plaser_debug.py  load_fields_example.py  load_global_test.py  load_me.txt  load_me2.txt  multi_agent_sim.txt  test_en.txt  test_entity_graph_load.py  test_gse_load_gse_dump.py  test_io_load_dump.py  test_load_entity_file.py  test_tkobjframe.py  tops_fields.txt  tops_pc.txt  tops_small_pc.txt
gse/gpt_examples/: draw_item.py  (+3 more)
tests/: load_and_display_parent_child_test.py  load_nested_test.py  load_parent_child_test.py  test_dictgraph_replace_value.py  test_main.py
tut_wikidata/: tut_wikidata_get_label.py  tut_wikidata_soap.py  tut_wikidata_sparkql_superclasses.py
(+6 files in other folders)
